# CMakePractice

./: .gitignore  CMakeLists.txt  HelloWorldConfig.h.in  License.txt  build.bat  build.sh  configure.bat  configure.sh  cpackRun.bat  cpackRun.sh  install.bat  install.sh  main.cpp  readme.md  removeOut.bat  run.bat  run.sh  vcpkg_rf.txt
Adder/: adder.cpp  adder.h
test/graphics/: CMakeLists.txt  tester.cpp
test/math/: CMakeLists.txt
